--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap");
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -17,6 +18,8 @@
 }
 
 body {
+  margin-left: 2.75rem;
+  margin-right: 2.75rem;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
