--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,13 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  body {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+}
+
 body {
   margin-left: 2.75rem;
   margin-right: 2.75rem;
@@ -27,10 +34,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
